--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body{
   margin:0;
   padding:0;
-  font-family: Arial,Helvetica," Helvetica Neue",sans-serif;
+  font-family: Poppins !important;
   font-size: 17px;
   color:#926237;
   line-height:1.6;
