--- a/styles.css
+++ b/styles.css
@@ -26,17 +26,20 @@ body{
 }
 #showcase h1{
   font-size:50px;
+  color:#fff;
 }
 
 #showcase p{
   font-size:20px;
+   color:#fff;
 }
+/* White Will Improve OverAll Look */
 #showcase .button{
   font-size:18px;
   text-decoration: none;
   color:#926239;
   border:#926239 1px solid;
-  padding:10px 20px;
+  padding:10px 30px;
   border-radius:10px;
   margin-top:20px;
 }
